# FigmaForge

./: .env.template  .gitignore  LICENSE  README.md  cli.py  mcp_stdio_server.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  EXAMPLES.md  MCP_INTEGRATION.md  TESTING_GUIDE.md
examples/button/: button.component.html  button.component.scss  button.component.ts
src/: __init__.py  cache.py  config.py  exceptions.py
src/extractors/: __init__.py  assets.py  figma_variables.py  interaction_states.py  scss_generator.py  token_scss.py  tokens.py  variants.py
src/figma/: __init__.py  client.py  normalizer.py  types.py
src/generators/: __init__.py  component_generator.py  framework_selector.py  html_generator.py  layout_converter.py  react_generator.py  responsive_layout.py  scss_generator.py  tailwind_generator.py  typescript_generator.py  vue_generator.py  webcomponent_generator.py
src/utils/: __init__.py  colors.py  console.py  css.py
tests/: conftest.py  test_extractors.py  test_generators.py  test_utils.py
